2002-12-23  Pavel Roskin  <proski@gnu.org>

	* layout.c (init_curses) [HAVE_SLANG]: Don't call
	SLtt_get_terminfo(), it's already called in slang_init().
	* main.c (init_xterm_support): Free term_entry.

	* subshell.c (subshell_switch_key): Make static const.

	* key.c (correct_key_code): Strip or add modifier information
	when necessary.  Recognize shift with function key N as function
	key (N + 10).  Fix breakage from previous patch.
	* key.h: Change XCTRL and ALT macros to use new definitions for
	keyboard modifiers.

2002-12-21  Pavel Roskin  <proski@gnu.org>

	* key.c (get_modifier): Make static.  Return the mc internal
	representation, not the Linux console code.
	(correct_key_code): Add the modifier, not strip it.
	(ctrl_pressed): Remove.  Adjust all dependencies.

	* key.h: Add definitions for the keyboard modifiers that can be
	part of the key code.
	* key.c (xterm_key_defines): Add some common key definitions
	with modifiers for xterm and rxvt.
	(correct_key_code): Strip and remember modifiers.
	(get_modifier): Add support for saved modifiers.

2002-12-20  Pavel Roskin  <proski@gnu.org>

	* layout.c (init_curses) [!HAVE_SLANG]: Set ESCDELAY to 200ms.
	If ESCDELAY is 0, ncurses 5.2 may stop recognizing escape
	sequences under heavy CPU load.

2002-12-19  Pavel Roskin  <proski@gnu.org>

	* screen.c (chdir_other_panel): Use do_panel_cd() on the
	opposite panel instead of changing the current panel twice.

	* main.c (make_panels_dirty): Preserve the cursor position.

2002-12-18  Tomas Styblo  <tripie@cpan.org>

	* hotlist.c (update_path_name): Update the title even when
	opening an empty group.

2002-12-16  Pavel Roskin  <proski@gnu.org>

	* dir.c (do_load_dir): Add an error message if mc_opendir()
	fails.
	(do_reload_dir): Likewise.
	* screen.c (do_enter_on_file_entry): Add an error message if
	do_cd() fails.

2002-12-15  Pavel Roskin  <proski@gnu.org>

	* view.c (do_view_init): Use non-blocking open() followed by